# AEGIS_Rag

./: .clinerules  .dockerignore  .env.dgx-spark  .env.dgx-spark.template  .env.production  .env.template  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .secrets.baseline  BACKLOG_SPRINT_3.md  CHANGELOG_OLLAMA_MIGRATION.md  CI_ERROR_ANALYSIS.md  CI_PRECOMMIT_REPORT.md  CLAUDE.md  CONTEXT_REFRESH.md  CONTEXT_REFRESH_SPRINT2_COMPLETE.md  CUsersKlaus  DGX_SPARK_SM121_REFERENCE.md  E2E_GROUPS_04_06_COMMIT_GUIDE.md  E2E_TEST_REVIEW_SUMMARY.md  FEATURE_31_2_IMPLEMENTATION_SUMMARY.md  FEATURE_31_5_31_7_RUN_TESTS.md  FEATURE_31_5_31_7_VALIDATION.md  FEATURE_31_6_31_10b_SUMMARY.md  FEATURE_62_3_IMPLEMENTATION_SUMMARY.md  FEATURE_63_4_COMPLETE.md  FEATURE_63_5_SUMMARY.md  FEATURE_67_10_SUMMARY.md  FEATURE_72_6_IMPLEMENTATION.md  FEATURE_73.5_COMPLETION_REPORT.md  FEATURE_73.5_DELIVERY_SUMMARY.txt  FEATURE_73_6_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY_31_2.txt  GROUP15_ENDPOINTS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPORT_VALIDATION_ANALYSIS.md  INTENT_CLASSIFICATION_FIX.md  MIGRATION_NOTES_SPRINT49.md  Makefile  (+85 more)
.claude/: README_PERMISSIONS.md  approved_commands.txt  permissions.json  settings.json  settings.local copy.json  settings.local.json  xxx_settings.local copy.json  xxx_settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
ChatGPT_Tests/: README.md  run_e2e.ps1  test_e2e_graph.py  test_e2e_retrieval.py  test_health_min.py
config/: llm_config.yml  mcp_servers.yaml  prometheus.yml  skill_triggers.yaml  tool_capabilities.yaml
data/: README.md
docker/: Dockerfile.api  Dockerfile.api-cuda  Dockerfile.api-test  Dockerfile.docling-spark  Dockerfile.docling-vlm  Dockerfile.frontend
docs/: AEGIS_RAG_DeepResearch_230251014.docx  AEGIS_RAG_WHITEPAPER.md  ARCHITECTURE.md  ARCHITECTURE_EVOLUTION.md  BGE_M3_EVALUATION.md  CHANGES_MADE.txt  CI_ANALYSIS_REPORT.md  CI_ANALYSIS_SPRINT_29.md  CI_CD_GUIDE.md  CI_FAILURES_ANALYSIS.md  CI_FIXES_CHECKLIST.md  CI_FIXES_SUMMARY.md  CI_OPTIMIZATION_TEST_PLAN.md  CLAUDE.md  CLAUDE_extended.md  CLAUDE_zusatzinfos.md  CODE_CHANGES_DETAILED.md  COMPONENT_INTERACTION_MAP.md  CONTEXT_REFRESH.md  CONTEXT_REFRESH_CHEATSHEET.txt  CONTEXT_REFRESH_MASTER_GUIDE.md  CONTEXT_REFRESH_MASTER_GUIDE_v4_backup.md  CONVENTIONS.md  DECISION_LOG.md  DEPENDENCY_RATIONALE.md  DOCKER_MEMORY_FIX_INSTRUCTIONS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_PLAN.md  DRIFT_ANALYSIS.md  E2E_TEST_FLOWS.md  E2E_TEST_SPRINT51_FIXES.md  ENFORCEMENT_GUIDE.md  FEATURE_14_1_LIGHTRAG_PROVENANCE.md  FEATURE_17_4_IMPLEMENTATION_REPORT.md  FINAL_TEST_RESULTS_SUMMARY.md  GIT_COMMIT_SUMMARY.md  LM_STUDIO_INSTALLATION.md  MODEL_COMPARISON_GEMMA_VS_LLAMA.md  MONITORING_GUIDE.md  NEO4J_LLM_GRAPH_BUILDER_COMPARISON.md  (+27 more)
examples/: audit_trail_example.py  browser_tool_security_demo.py  citation_example.py  evaluation_report_example.py  followup_questions_example.py  gdpr_demo.py  reward_loop_demo.py  section_community_detection_example.py  section_graph_queries.py  secure_action_agent_example.py  skill_tool_mapping_example.py  sprint9_action_agent_example.py  streaming_example.py  test_deep_research.py  tool_chain_dsl_examples.py
frontend/: .env.development  .env.example  .env.production  .gitignore  CHAT_COMPONENT_TESTS_REFERENCE.md  E2E_TEST_SUMMARY.md  SPRINT_109_PLAN.md  SPRINT_46_TEST_FIXES_SUMMARY.md  TESTING_QUICK_START.md  VISUAL_REGRESSION_GUIDE.md  VISUAL_REGRESSION_QUICK_REF.md  error-tests-output.txt  error-tests-playwright.txt  index.html  package-lock.json  package.json  package.json.test-scripts  playwright.config.parallel.ts  playwright.config.ts  tailwind.config.js  test-results.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
nginx/: nginx.conf
prometheus/: README.md  alerts.yml
reports/: benchmark_gemma3_4b_20251211_073943.json  benchmark_parallel_20251211_080900.json  benchmark_parallel_hotpotqa_20251211_100720.json  benchmark_qwen2.5_7b_20251211_075713.json  benchmark_smart_gemma3_4b_20251211_090246.json  benchmark_smart_qwen2.5_7b_20251211_093131.json  chunk_size_benchmark_20251210_211022.json  dedup_test_20251210_225839.json  dedup_test_20251210_230131.json  dedup_test_20251210_230509.json  llm_extraction_benchmark_20251210_231048.json  llm_extraction_benchmark_20251210_231122.json  llm_extraction_benchmark_round2_20251211_071122.json  llm_extraction_benchmark_round2_20251211_071122_dedup.json  model_sanity_test_20251211_065327.json  model_sanity_test_20251211_065540.json  model_sanity_test_20251211_065841.json  ragas_txt_pipeline_eval_20251211_135825.json  ragas_txt_pipeline_eval_20251211_160655.json
scripts/: DOCUMENTATION_SUMMARY.md  README.md  README_PERFORMANCE.md  README_PROFILING.md  analyze_metadata_fields.py  ask_question.py  backfill_relation_types.py  batch_upload_ragas_10.sh  benchmark_chunk_sizes.py  benchmark_chunking_hotpotqa.py  benchmark_chunking_smart.py  benchmark_chunking_valid.py  benchmark_cross_sentence_v2.py  benchmark_cross_sentence_v3.py  benchmark_cross_sentence_v4.py  benchmark_cross_sentence_v5.py  benchmark_cross_sentence_windows.py  benchmark_embeddings.py  benchmark_extraction.py  benchmark_extraction_30.py  benchmark_extraction_models.sh  benchmark_gpu.py  benchmark_llm_extraction.py  benchmark_llm_round2.py  benchmark_model_chunksizes.py  benchmark_parallel_hotpotqa.py  benchmark_query_latency.py  benchmark_relation_extraction_only.py  benchmark_section_extraction.py  benchmark_section_extraction_sprint121.py  benchmark_table_ingestion.py  benchmark_unified_chunked.py  benchmark_vlm_parallel.py  benchmark_with_deduplication.py  bge_m3_relation_mapper.py  build_datasets.py  check_adr.py  check_conventional_commit.py  check_imports.py  check_indexed_docs.py  (+155 more)
skill_libraries/: README.md
skills/: README.md
tests/: README.md  SPRINT_48_TESTS_README.md  SPRINT_99_TEST_INDEX.md  TESTING_QUICK_START.md  backfill_relates_to.py  conftest.py  debug_admin_api_progress.py  debug_relates_to.py  debug_streaming_progress.py  test_admin_upload.py  test_ingestion_relates_to.py  (+3 more)
(+2876 files in other folders)
